--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -504,8 +504,8 @@
     </div> -->
 
     <mgl-map (click)="onMapClickEvent($event)"
-             (mouseUp)="onDragEnd()"
-             (touchEnd)="onDragEnd()"
+             (mouseUp)="onDragEnd($event)"
+             (touchEnd)="onDragEnd($event)"
              (moveEnd)="onMoveEnd()"
              (resize)="onMoveEnd()"
              (load)="loadMap($event)"
@@ -564,7 +564,7 @@
                    [minzoom]="11"
                    [sourceLayer]="'br_brzone_flat_with_display'"
                    [paint]="{
-                        'line-color': teilmarkt.color,
+                        'line-color': teilmarkt.hexColor,
                         'line-width': {
                             'stops': [[11,0],[13,1],[18,2]]
                         },
@@ -572,7 +572,7 @@
                             'stops' : [[11,0],[13,1]]
                         }
                     }"
-                   [layout]="teilmarkt.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
+                   [layout]="teilmarkt?.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
                    [filter]="['all',['in', 'entw', 'B', 'SF', 'R', 'E'],['==', 'stag', stichtag]]">
         </mgl-layer>
 
@@ -591,7 +591,7 @@
                                 'stops' : [[11,0],[13,.6]]
                             }
                     }"
-                   [layout]="teilmarkt.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
+                   [layout]="teilmarkt?.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
                    [filter]="['all',['in', 'verg', 'San', 'SoSt', 'Entw', 'StUb'],['==', 'stag', stichtag]]">
         </mgl-layer>
 
@@ -601,7 +601,7 @@
                    [sourceLayer]="'br_brzone_flat_with_display'"
                    [minzoom]="10"
                    [paint]="{
-                        'line-color': teilmarkt.color,
+                        'line-color': teilmarkt.hexColor,
                         'line-width': {
                             'stops': [[8,0],[10,1],[11,2]]
                         },
@@ -609,7 +609,7 @@
                             'stops' : [[8,0],[10,1]]
                         }
                     }"
-                   [layout]="teilmarkt.value.includes('LF') ? {visibility: 'visible'} : {visibility: 'none'}"
+                   [layout]="teilmarkt?.value.includes('LF') ? {visibility: 'visible'} : {visibility: 'none'}"
                    [filter]="['all',['==', 'entw', 'LF'], ['==','stag',stichtag]]">
         </mgl-layer>
 
@@ -620,7 +620,7 @@
                    [minzoom]="11"
                    [sourceLayer]="'br_brzone_flat_bremen_with_display'"
                    [paint]="{
-                        'line-color': teilmarkt.color,
+                        'line-color': teilmarkt.hexColor,
                         'line-width': {
                             'stops': [[11,0],[13,1],[18,2]]
                         },
@@ -628,7 +628,7 @@
                             'stops' : [[11,0],[13,1]]
                         }
                     }"
-                   [layout]="teilmarkt.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
+                   [layout]="teilmarkt?.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
                    [filter]="['all',['in', 'entw', 'B', 'SF', 'R', 'E'],['==', 'stag', stichtag]]">
         </mgl-layer>
 
@@ -647,7 +647,7 @@
                                 'stops' : [[11,0],[13,.6]]
                             }
                     }"
-                   [layout]="teilmarkt.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
+                   [layout]="teilmarkt?.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
                    [filter]="['all',['in', 'verg', 'San', 'SoSt', 'Entw', 'StUb'],['==', 'stag', stichtag]]">
         </mgl-layer>
 
@@ -657,7 +657,7 @@
                    [sourceLayer]="'br_brzone_flat_bremen_with_display'"
                    [minzoom]="10"
                    [paint]="{
-                        'line-color': teilmarkt.color,
+                        'line-color': teilmarkt.hexColor,
                         'line-width': {
                             'stops': [[8,0],[10,1],[11,2]]
                         },
@@ -665,7 +665,7 @@
                             'stops' : [[8,0],[10,1]]
                         }
                     }"
-                   [layout]="teilmarkt.value.includes('LF') ? {visibility: 'visible'} : {visibility: 'none'}"
+                   [layout]="teilmarkt?.value.includes('LF') ? {visibility: 'visible'} : {visibility: 'none'}"
                    [filter]="['all',['==', 'entw', 'LF'], ['==','stag',stichtag]]">
         </mgl-layer>
 
@@ -678,7 +678,7 @@
                         'text-halo-color': '#fff',
                         'text-halo-width': 2,
                         'text-halo-blur': 2,
-                        'text-color': teilmarkt.color
+                        'text-color': teilmarkt.hexColor
                     }"
                    [layout]="{
                         'visibility': 'visible',
@@ -698,7 +698,7 @@
                         'text-halo-color': '#fff',
                         'text-halo-width': 2,
                         'text-halo-blur': 2,
-                        'text-color': teilmarkt.color
+                        'text-color': teilmarkt.hexColor
                     }"
                    [layout]="{
                         'visibility': 'visible',
