--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -7,9 +7,11 @@
             <power-bodenrichtwert-navigation [(stichtag)]="stichtag"
                                              [(teilmarkt)]="teilmarkt"
                                              [(flurstueck)]="flurstueck"
-                                             [features]="features"
-                                             [adresse]="adresse"
-                                             [(isCollapsed)]="isCollapsed">
+                                             [(features)]="features"
+                                             [(adresse)]="adresse"
+                                             [(isCollapsed)]="isCollapsed"
+                                             [(threeDActive)]="threeDActive"
+                                             [(latLng)]="latLng">
                 <!-- 
                                              [collapsed]="collapsed"
                                              [expanded]="expanded" -->
@@ -20,7 +22,8 @@
                                        [expanded]="expanded"
                                        [stichtag]="stichtag"
                                        [teilmarkt]="teilmarkt"
-                                       [(latLng)]="latLng">
+                                       [(latLng)]="latLng"
+                                       [threeDActive]="threeDActive">
                 <!-- [(flurstueck)]="flurstueck"
                                        [(adresse)]="adresse"
                                        [(features)]="features" -->
