--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -504,8 +504,6 @@
     </div> -->
 
     <mgl-map (click)="onMapClickEvent($event)"
-             (mouseUp)="onDragEnd($event)"
-             (touchEnd)="onDragEnd($event)"
              (moveEnd)="onMoveEnd()"
              (resize)="onMoveEnd()"
              (load)="loadMap($event)"
@@ -516,6 +514,8 @@
              [style]="MAP_STYLE_URL"
              [trackResize]="true"
              id="map">
+        <!-- (touchEnd)="onDragEnd()" -->
+        <!-- (mouseUp)="onDragEnd($event)" -->
 
         <mgl-geojson-source id="ndsgeojson"
                             [data]="baseUrl+'/assets/boden/niedersachsen.geojson'"></mgl-geojson-source>
