--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -212,7 +212,7 @@
                 class="btn dropdown-toggle nav-link"
                 aria-controls="dropdown-teilmarkt-1"
                 aria-haspopup="true">
-            <span i18n>Teilmarkt</span>: {{teilmarkt.text}}
+            <span i18n>Teilmarkt</span>: {{teilmarkt?.text}}
             <span class="caret"
                   aria-hidden="true"></span>
         </button>
