--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -31,7 +31,7 @@
         </div>
         <!-- collapsing sidebar -->
         <div class="p-0 border-left"
-             [class]="isCollapsed && map.map ? 'col-auto' : 'col-lg-6'">
+             [class]="isCollapsed ? 'col-auto' : 'col-lg-6'">
             <div class="row m-0 p-0">
                 <div class="px-1 py-0"
                      [class]="isCollapsed ? 'd-none d-lg-block col-lg-12' : 'd-none d-lg-block col-lg-1'">
