--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -3,7 +3,9 @@
         <div id="mapWrapper"
              class="p-0 border-bottom map-height"
              [class]="isCollapsed ? 'col d-block' : 'col-lg-6'">
-            <power-bodenrichtwert-navigation [(stichtag)]="stichtag"
+            <power-bodenrichtwert-navigation [(latLng)]="latLng"
+                                             (latLngChange)="changeURL()"
+                                             [(stichtag)]="stichtag"
                                              (stichtagChange)="changeURL()"
                                              [(teilmarkt)]="teilmarkt"
                                              (teilmarktChange)="changeURL()"
@@ -12,18 +14,16 @@
                                              [(adresse)]="adresse"
                                              [(isCollapsed)]="isCollapsed"
                                              [(threeDActive)]="threeDActive"
-                                             [(latLng)]="latLng"
-                                             (latLngChange)="changeURL()"
                                              [(resetMapFired)]="resetMapFired">
             </power-bodenrichtwert-navigation>
             <power-bodenrichtwertkarte #map
+                                       [(latLng)]="latLng"
+                                       (latLngChange)="changeURL()"
+                                       [stichtag]="stichtag"
+                                       [teilmarkt]="teilmarkt"
                                        [(isCollapsed)]="isCollapsed"
                                        [collapsed]="collapsed"
                                        [expanded]="expanded"
-                                       [stichtag]="stichtag"
-                                       [teilmarkt]="teilmarkt"
-                                       [(latLng)]="latLng"
-                                       (latLngChange)="changeURL()"
                                        [threeDActive]="threeDActive"
                                        [(resetMapFired)]="resetMapFired">
             </power-bodenrichtwertkarte>
@@ -34,7 +34,7 @@
             <div class="row m-0 p-0">
                 <div *ngIf="adresse || features"
                      class="px-1 py-0 d-none d-lg-flex"
-                     [class.col-lg-1]="!isCollapsed">
+                     [ngClass]="{'col-lg-1' : !isCollapsed}">
                     <button class="btn p-0 w-100 rounded-0 collapse-btn-size"
                             type="button"
                             title="Detailansicht ein- bzw. ausklappen"
@@ -91,7 +91,6 @@
             <ng-template [ngTemplateOutlet]="detailsHints"></ng-template>
             <div *ngIf="features?.features.length"
                  class="col-12 p-0">
-
                 <power-bodenrichtwert-detail [stichtag]="stichtag"
                                              [teilmarkt]="teilmarkt"
                                              [features]="features">
